err/geoprisma-config.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/geoprisma_config'...
Listing './lib/python3.5/site-packages/geoprisma_config/conf'...
Listing './lib/python3.5/site-packages/geoprisma_config/management'...
Listing './lib/python3.5/site-packages/geoprisma_config/management/commands'...
Compiling './lib/python3.5/site-packages/geoprisma_config/management/commands/import.py'...
***   File "./lib/python3.5/site-packages/geoprisma_config/management/commands/import.py", line 29
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/geoprisma_config/static'...
Listing './lib/python3.5/site-packages/geoprisma_config/static/admin'...
Listing './lib/python3.5/site-packages/geoprisma_config/static/admin/gc_css'...
Listing './lib/python3.5/site-packages/geoprisma_config/static/admin/gc_img'...
Listing './lib/python3.5/site-packages/geoprisma_config/static/admin/gc_img/admin'...
Listing './lib/python3.5/site-packages/geoprisma_config/static/admin/gc_img/gis'...
Listing './lib/python3.5/site-packages/geoprisma_config/static/admin/gc_js'...
Listing './lib/python3.5/site-packages/geoprisma_config/static/admin/gc_js/admin'...
Listing './lib/python3.5/site-packages/geoprisma_config/static/gc_js'...
Listing './lib/python3.5/site-packages/geoprisma_config/templates'...
Listing './lib/python3.5/site-packages/geoprisma_config/templates/admin'...
Listing './lib/python3.5/site-packages/geoprisma_config/templates/admin/edit_inline'...
Listing './lib/python3.5/site-packages/geoprisma_config/templates/admin/includes'...
Listing './lib/python3.5/site-packages/geoprisma_config-0.0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
